vlib/v/checker/tests/for_in_range_narrow_type_overflow_256_err.vv
fn main() {
	for b in u8(0) .. 256 {
		println(b)
	}
}
